# scico

./: .env  .gitignore  LICENSE  LLM_INSTRUCTIONS.md  ProjectDescription.md  ProjectDescription2.md  README.md  ResearchWorkflowOverview.md  SciCO_Interactive_Tutorial.ipynb  Zotero_API.ipynb  __init__.py  directory_tree_generator.py  env.example  langgraph.json  pyproject.toml  requirements.txt  system_prompt_generator.py
.aiassistant/rules/: Langgraph_agents.md  ScicoInformationAndPhilosophy.md  Tests.md  The way of the Python.md
explore_langchain/: Langchain_RAG_example.ipynb
legacy/: MainProcessor.py  ZoteroIntegration.py
optimal_text_extraction/: indexer.py  markdown_extractor.py  zotero_metadata_extractor.py
prototype3/zotero_metadata_extractor/: ZoteroDatabaseHandler.py
prototype_0/: PdfToMarkdown.py  RAG_agent.py  ZoteroIntegration.py  indexer.py  markdown_chunker.py  markdown_extractor.py  zotero_metadata_extractor.py
prototype_1/: __init__.py
prototype_1/document_processing/: __init__.py  markdown_extractor.py  pdf_converter.py
prototype_1/metadata/: __init__.py  metadata_manager.py  zotero_extractor.py
prototype_1/vector_storage/: __init__.py
src/: Logger.py  MainProcessor.py  Main_MCP.py  MarkdownChunker.py  PdfToMarkdown.py  RAGQuestionOptimizer.py  RAGSystem.py  TextSplitter.py  Tool_TextSplitter.py  Tool_VectorStorage.py  VectorStorage.py  Zotero.py  ZoteroIntegration.py  ZoteroLibrarianAgent.py  ZoteroPdfIndexer.py  Zotero_MCP.py  __init__.py  configs.py  zotero_client.py  zotero_retriever_agent.py
tutorials/: QueryDB.ipynb  SciCO_Interactive_Tutorial.ipynb  Zotero_API.ipynb  scico_example_agent_workflow.py  test_zotero_client.py
(+35 files in other folders)
