[project]
name = "scico"
version = "0.1.0"
description = "This project serves as a scientific coworker centered arround an LLM"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=0.3.23",
    "langchain>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "marker-pdf>=1.10.1",
    "pandas>=2.3.3",
    "pyzotero>=1.7.3",
    "sqlalchemy>=2.0.44",
]
