[project]
name = "scico"
version = "0.1.0"
description = "AI-powered scientific research assistant that removes technical barriers through agentic workflows, integrating Zotero, vector storage, and document processing to elevate human creativity in research and coding."
requires-python = "==3.13.*"
dependencies = [
    "chromadb>=0.3.23",
    "langchain>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "marker-pdf>=1.10.1",
    "pandas>=2.3.3",
    "mcp>=0.9.0",
    "python-dotenv",
    "pyzotero",
    "sqlalchemy",
    "fastmcp>=2.13.0.2",
    "notebook>=7.4.7",
    "langchain-ollama>=1.0.0",
    "langchain-mcp-adapters>=0.1.12",
    "semantic-chunkers>=0.1.1",
    "langchain-chroma>=1.0.0",
    "streamlit>=1.51.0",
    "langchain-openai>=1.0.2",
    "langgraph-cli[inmem]>=0.4.7",
]
